fix broken width login-modal on mobile

--- a/wwwroot/assets/css/default.css
+++ b/wwwroot/assets/css/default.css
@@ -871,7 +871,6 @@ footer {
 	outline: 1px solid var(--color-text-grey);
 }
 
-
 .login-content-btn {
 	width: 80%;
 	margin: auto;
@@ -913,8 +912,6 @@ footer {
 .login-error-message {
 	color: var(--color-red);
 }
-
-
 
 /*	styling for about us  */
 .active.link-text::before {
@@ -1522,6 +1519,7 @@ input:checked + .slider::before {
 	.login {
 		height: 460px;
 		min-width: min-content;
+		width: unset;
 		gap: 20px;
 	}
 
